--- a/LahServer/LahServer.csproj
+++ b/LahServer/LahServer.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Compile Include="Extensions.cs" />
     <Compile Include="Game\Converters\EnumNameConverter.cs" />
+    <Compile Include="Game\Converters\TrophyRequirementConverter.cs" />
     <Compile Include="Game\GameStage.cs" />
     <Compile Include="Game\BlackCard.cs" />
     <Compile Include="Game\Card.cs" />
@@ -71,6 +72,7 @@
     <Compile Include="Game\LahPlayer.cs" />
     <Compile Include="Game\NameAttribute.cs" />
     <Compile Include="Game\StringUtilities.cs" />
+    <Compile Include="Game\Trophies\CardProportionTrophyRequirement.cs" />
     <Compile Include="Game\Trophies\Trophy.cs" />
     <Compile Include="Game\Trophies\TrophyRequirement.cs" />
     <Compile Include="HashList.cs" />
