--- a/LahServer/settings.json
+++ b/LahServer/settings.json
@@ -11,6 +11,6 @@
 	"perma_czar": false,
 	"afk_time_seconds": 600,
 	"afk_recovery_time_seconds": 90,
-	"content_exclude": [],
+	"exclude_content": [],
 	"enable_trophies": true
 }
