Add `require_languages` property to settings

--- a/CardsOverLan/settings.json
+++ b/CardsOverLan/settings.json
@@ -16,5 +16,6 @@
 	"bot_count": 3,
 	"bot_names": [
 	"AutoRodney", "AutoJaiden", "AutoDixon", "AutoMatt", "AutoVon", "AutoJinnie", "AutoAnderson", "AutoShirlene", "AutoClara", "AutoAlvin"
-	]
+	],
+	"require_languages": ["en"]
 }
