--- a/CardsOverLan/CardsOverLan.csproj
+++ b/CardsOverLan/CardsOverLan.csproj
@@ -62,6 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions.cs" />
+    <Compile Include="GameManager.cs" />
     <Compile Include="Game\Converters\EnumNameConverter.cs" />
     <Compile Include="Game\Converters\TrophyRequirementConverter.cs" />
     <Compile Include="Game\GameStage.cs" />
