--- a/CardsOverLan/CardsOverLan.csproj
+++ b/CardsOverLan/CardsOverLan.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CardGameServer.cs" />
     <Compile Include="Game\RoundPlay.cs" />
+    <Compile Include="SpectatorConnection.cs" />
     <Compile Include="Web\IndexModule.cs" />
     <Compile Include="Web\GameBootstrapper.cs" />
   </ItemGroup>
