--- a/CardsOverLan/CardsOverLan.csproj
+++ b/CardsOverLan/CardsOverLan.csproj
@@ -62,6 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions.cs" />
+    <Compile Include="GameConnectionBase.cs" />
     <Compile Include="GameManager.cs" />
     <Compile Include="Game\Converters\EnumNameConverter.cs" />
     <Compile Include="Game\Converters\TrophyRequirementConverter.cs" />
@@ -83,7 +84,7 @@
     <Compile Include="Game\Trophies\TrophyRequirement.cs" />
     <Compile Include="Game\Trophies\WinProportionTrophyRequirement.cs" />
     <Compile Include="HashList.cs" />
-    <Compile Include="ClientConnection.cs" />
+    <Compile Include="PlayerConnection.cs" />
     <Compile Include="Game\WhiteCard.cs" />
     <Compile Include="GameSettings.cs" />
     <Compile Include="LocalizedString.cs" />
@@ -91,6 +92,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CardGameServer.cs" />
     <Compile Include="Game\RoundPlay.cs" />
+    <Compile Include="RejectCodes.cs" />
     <Compile Include="SpectatorConnection.cs" />
     <Compile Include="Web\IndexModule.cs" />
     <Compile Include="Web\GameBootstrapper.cs" />
