--- a/CardsOverLan/settings.json
+++ b/CardsOverLan/settings.json
@@ -22,7 +22,7 @@
 	"bot_count": 2,
 	"bot_czars": true,
 	"bot_names": [
-		"AutoRodney", "AutoScott", "AutoDixon", "AutoMatt", 
+		"AutoRodney", "AutoJavier", "AutoDixon", "AutoJanet", 
 		"AutoVon", "AutoJinnie", "AutoAnderson", "AutoShirlene", 
 		"AutoClara", "AutoAlvin", "AutoRiley", "AutoBahn"
 	],
