Add server info marquee, max_rounds setting

--- a/CardsOverLan/settings.json
+++ b/CardsOverLan/settings.json
@@ -13,14 +13,15 @@
 	"round_end_timeout": 5000,
 	"game_end_timeout": 30000,
 	"max_points": 8,
+	"max_rounds": 16,
 	"perma_czar": false,
-	"winner_czar": true,
+	"winner_czar": false,
 	"afk_time_seconds": 600,
 	"afk_recovery_time_seconds": 90,
 	"exclude_content": [],
 	"enable_trophies": true,
 	"bot_count": 2,
-	"bot_czars": true,
+	"bot_czars": false,
 	"bot_names": [
 		"AutoRodney", "AutoJavier", "AutoDixon", "AutoJanet", 
 		"AutoVon", "AutoJinnie", "AutoAnderson", "AutoShirlene", 
