--- a/CardsOverLan/settings.json
+++ b/CardsOverLan/settings.json
@@ -1,14 +1,15 @@
 ﻿{
 	"host": "http://localhost:80",
-	"server_name": "Cards Over LAN",
+	"server_name": "Berkin's Test Server",
 	"max_players": 15,
 	"min_players": 3,
 	"max_spectators": 10,
 	"max_player_name_length": 64,
-	"allow_duplicates": true,
+	"allow_duplicates": false,
 	"hand_size": 10,
 	"blank_cards": 3,
 	"discards": 10,
+	"allow_skips": true,
 	"enable_upgrades": true,
 	"round_end_timeout": 5000,
 	"game_end_timeout": 30000,
