Bot taunts, new settings, bugfixes

--- a/CardsOverLan/CardsOverLan.csproj
+++ b/CardsOverLan/CardsOverLan.csproj
@@ -47,6 +47,9 @@
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="Rant, Version=3.0.6.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Rant.3.0.531\lib\net45\Rant.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
@@ -65,6 +68,7 @@
     <Compile Include="Extensions.cs" />
     <Compile Include="ClientConnectionBase.cs" />
     <Compile Include="GameManager.cs" />
+    <Compile Include="Game\Bots\Taunt.cs" />
     <Compile Include="Game\ClientFacingAttribute.cs" />
     <Compile Include="Game\ClientObjectPolicyAttribute.cs" />
     <Compile Include="Game\ClientObjectPolicyType.cs" />
@@ -110,6 +114,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Rant License.txt" />
     <Content Include="readme.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
