--- a/CardsOverLan/packages.config
+++ b/CardsOverLan/packages.config
@@ -4,5 +4,6 @@
   <package id="Nancy" version="1.4.5" targetFramework="net472" />
   <package id="Nancy.Hosting.Self" version="1.4.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net472" />
+  <package id="Rant" version="3.0.531" targetFramework="net472" />
   <package id="WebSocketSharp" version="1.0.3-rc11" targetFramework="net472" />
 </packages>
