Server passwords, better server endpoint controls, various bugfixes
See updated changelog

--- a/CardsOverLan/CardsOverLan.csproj
+++ b/CardsOverLan/CardsOverLan.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Game\RoundPlay.cs" />
     <Compile Include="RejectCodes.cs" />
     <Compile Include="SpectatorConnection.cs" />
+    <Compile Include="Tally.cs" />
     <Compile Include="Web\WebappModule.cs" />
     <Compile Include="Web\WebappBootstrapper.cs" />
   </ItemGroup>
