--- a/CardsOverLan/settings.json
+++ b/CardsOverLan/settings.json
@@ -1,7 +1,7 @@
 ﻿{
-	"host": "http://localhost:80",
 	"server_name": "Cards Over LAN",
-	"max_players": 15,
+	"server_password": "",
+	"max_players": 20,
 	"min_players": 3,
 	"max_spectators": 10,
 	"max_player_name_length": 64,
@@ -15,14 +15,16 @@
 	"enable_upgrades": true,
 	"enable_chat": true,
 	"enable_bot_taunts": true,
+	"enable_afk": true,
+	"enable_idle_kick": true,
 	"round_end_timeout": 5000,
 	"game_end_timeout": 30000,
-	"max_points": 10,
 	"max_rounds": 16,
 	"perma_czar": false,
-	"winner_czar": false,
-	"afk_time_seconds": 180,
-	"afk_recovery_time_seconds": 90,
+	"winner_czar": true,
+	"afk_recovery_time_seconds": 60,
+	"afk_time_seconds": 90,
+	"idle_kick_time_seconds": 180,
 	"exclude_content": [],
 	"enable_trophies": true,
 	"bot_count": 2,
@@ -40,7 +42,11 @@
 		"judge_min_per_play_delay": 3000,
 		"judge_max_per_play_delay": 5500,
 		"judge_min_per_card_delay": 2000,
-		"judge_max_per_card_delay": 3000
+		"judge_max_per_card_delay": 3000,
+		"min_typing_interval": 40,
+		"max_typing_interval": 55,
+		"min_typing_delay": 750,
+		"max_typing_delay": 2000
 	},
 	"require_languages": ["en"],
 	"use_packs": [],
