More granular timeouts, new cards

--- a/CardsOverLan/settings.json
+++ b/CardsOverLan/settings.json
@@ -15,24 +15,28 @@
 	"max_player_name_length": 64,
 	"max_blank_card_length": 150,
 	"hand_size": 10,
-	"pick_one_only": false,
 	"blank_cards": 3,
 	"discards": 15,
+	"pick_one_only": false,
 	"allow_skips": true,
 	"enable_upgrades": true,
-	"enable_chat": true,	
-	"enable_afk": true,
-	"enable_idle_kick": true,
-	"enable_trophies": true,	
+	"enable_chat": true,
+	"enable_trophies": true,
 	"max_points": 8,
 	"max_rounds": 16,
 	"perma_czar": false,
 	"winner_czar": true,
 	"round_end_timeout": 5000,
 	"game_end_timeout": 30000,
+
+	/* PLAYER TIMEOUTS */
+	"enable_afk": true,
+	"enable_idle_kick": true,
 	"afk_recovery_time_seconds": 60,
 	"afk_time_seconds": 90,
 	"idle_kick_time_seconds": 180,
+	"judge_per_card_timeout_bonus": 7,
+	"player_per_card_timeout_bonus": 10,
 
 	/* PLAYER PRESERVES */
 	"enable_player_preserve": true,
